# ConfigLab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/prompts/: create-readme.prompt.md
configs/: config.yaml
configs/experiment/: default.yaml
configs/hparams_search/: default.yaml
configs/hydra/: default.yaml
configs/paths/: default.yaml
configs/task/: predict.yaml  test.yaml  train.yaml
scripts/: results_helper.py  train.py
src/configlab/configs/: base.py  data_config.py  model_config.py  training_config.py
src/configlab/data/: data_prepare.py  mnist_datamodule.py
src/configlab/models/: mnist_modelmodule.py
src/configlab/models/comps/: encoder.py  head.py
src/configlab/pipelines/: build.py  runner.py
src/configlab/types/: model.py
src/configlab/utils/: git_utils.py  hydra_utils.py  rich_utils.py  utils.py
tests/: conftest.py  test_config.py  test_data.py  test_utils.py
tests/intergration/: test_config.py  test_pipeline.py
tests/unit/: test_data.py  test_model.py
